--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -6,7 +6,7 @@
     <title>Homepage - A fake website</title>
   </head>
   <body>
-    <header class="header">
+    <div class="header">
       <div>
         <div>
           <div><a href="#"><img alt="Name of the logo" src="img/logo.png"></a></div>
@@ -23,10 +23,9 @@
           </nav>
         </div>
       </div>
-    </header>
+    </div>
     <h1>Homepage</h1>
-    <main>
-    <section class="section">
+    <div class="section">
       <div class="container">
         <div class="row">
           <div class="col-6">
@@ -37,8 +36,8 @@
           <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
         </div>
       </div>
-    </section>
-    <section class="section">
+    </div>
+    <div class="section">
       <div class="container">
         <div class="row">
           <div class="col-6"><img class="img-fluid" src="about-img.png" alt="About image"></div>
@@ -49,8 +48,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="section">
+    </div>
+    <div class="section">
       <div class="container">
         <div class="row">
           <div class="col-7">
@@ -75,8 +74,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="section">
+    </div>
+    <div class="section">
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
@@ -89,8 +88,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="section">
+    </div>
+    <div class="section">
       <div class="container">
         <div class="row">
           <div class="menu-content">
@@ -113,8 +112,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="section">
+    </div>
+    <div class="section">
       <div class="container">
         <div class="row">
           <div class="col-8">
@@ -140,9 +139,8 @@
           </div>
         </div>
       </div>
-    </section>
-    </main>
-    <footer class="footer">
+    </div>
+    <div class="footer">
       <div class="container">
         <div class="row">
           <div class="col-5">
@@ -172,7 +170,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
 
