--- a/0x07-accessibility/fix-a11y/10-index.html
+++ b/0x07-accessibility/fix-a11y/10-index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </section>
-    <div class="section">
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
