--- a/0x09-implement_a_design_from_scratch/0-index.html
+++ b/0x09-implement_a_design_from_scratch/0-index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Headphones streaming service">
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <link rel="icon" type="image/png" href="./images/favicon.png">
-        <link rel='stylesheet' href='styles.css'>
+        <link rel='stylesheet' href='0-styles.css'>
         <title>Headphones</title>
     </head>
     <body>
