--- a/0x0D-JQuery_advanced/2-index.html
+++ b/0x0D-JQuery_advanced/2-index.html
@@ -18,24 +18,30 @@
             $( document ).ready(function() {
                 function createFamilyTree() {
                     $("body").append(
-                        `<table>
-                            <tr>
-                                <th>Firstname</th>
-                                <th>Lastname</th>
-                            </tr>
-                            <tr>
-                                <td>Guillaume</td>
-                                <td>Salva</td>
-                            </tr>
-                            <tr>
-                                <td>Paulette</td>
-                                <td>Salva</td>
-                            </tr>
-                            <tr>
-                                <td>Antoine</td>
-                                <td>Salva</td>
-                            </tr>
-                        </table>`
+                        `
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Firstname</th>
+                                    <th>Lastname</th>
+                                </tr>
+                            </head>
+                            <tbody>
+                                <tr>
+                                    <td>Guillaume</td>
+                                    <td>Salva</td>
+                                </tr>
+                                <tr>
+                                    <td>Paulette</td>
+                                    <td>Salva</td>
+                                </tr>
+                                <tr>
+                                    <td>Antoine</td>
+                                    <td>Salva</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        `
                     );
                 }
                 createFamilyTree();
