--- a/0x0D-JQuery_advanced/3-index.html
+++ b/0x0D-JQuery_advanced/3-index.html
@@ -18,7 +18,9 @@
             $( document ).ready(function() {
                 function createFamilyTree() {
                     $("body").append("<table>");
-                    $("table").append("<tr>", "<tr>", "<tr>", "<tr>");
+                    $("table").append("<thead>", "<tbody>")
+                    $("thead").append("<tr>");
+                    $("tbody").append("<tr>", "<tr>", "<tr>");
                     $("tr").eq(0).append("<th>", "<th>");
                     $("tr").eq(1).append("<td>", "<td>");
                     $("tr").eq(2).append("<td>", "<td>");
